--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-preset-react": "^6.23.0",
     "calendar": "^0.1.0",
     "immutable": "^3.8.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -38,6 +40,7 @@
     "react-router-dom": "^4.0.0-beta.7",
     "redux": "^3.6.0",
     "redux-immutable": "^3.1.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "shortid": "^2.2.8"
   }
 }
