client-server comms

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "express": "^4.15.2",
     "hogan.js": "^3.0.2",
     "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "koa": "^2.1.0",
+    "koa-cors": "0.0.16",
     "koa-mount": "^2.0.0",
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
