--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "sass-loader": "^6.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "babel-core": "^6.23.1",
@@ -32,18 +32,17 @@
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.23.0",
     "calendar": "^0.1.0",
-    "express": "^4.15.2",
     "hogan.js": "^3.0.2",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.1.0",
+    "koa-body": "^2.0.0",
     "koa-cors": "0.0.16",
     "koa-mount": "^2.0.0",
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
     "koa-views": "^6.0.1",
     "lodash.debounce": "^4.0.8",
-    "lodash.throttle": "^4.1.1",
     "moment": "^2.17.1",
     "mongoose": "^4.8.6",
     "react": "^15.4.2",
